# TestTask

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  init_migration.sql  pyproject.toml
alembic/: env.py
alembic/versions/: a2a3deb4e461_init_revision.py
secrets/: db_credentials.env
sources/: di_container.py  main.py  models.py  views.py
sources/db/: __init__.py  dao.py
sources/schemas/: requests.py  responces.py  test_task_types.py
sources/shared/: constants.py  exceptions.py
tests/: test_api.py
